tests/baselines/reference/strictAssignment4.errors.txt
tests/cases/compiler/strictAssignment4.ts(18,9): error TS2756: Argument of type 'Cat[]' is not assignable to parameter of type 'Animal[]'. Covariant assignment of aliases to non-readonly targets are unsafe.
tests/cases/compiler/strictAssignment4.ts(24,9): error TS2756: Argument of type 'Cat[]' is not assignable to parameter of type 'Dog[]'. Covariant assignment of aliases to non-readonly targets are unsafe.
tests/cases/compiler/strictAssignment4.ts(25,10): error TS2322: Type 'Cat' is not assignable to type 'Dog'.


==== tests/cases/compiler/strictAssignment4.ts (3 errors) ====
    module StrictAssignment4 {
        class Animal {}
        class Cat { purr() {} }
        class Dog { bark() {} }
        
        const cats: Cat[] = [new Cat];
        
        function foo(animals: Cat[]): void
        function foo(animals: Animal[]): void {
        }
        foo(cats); // okay, because there's a safe overload
        foo([new Cat]); // okay, because there's a safe overload
    
        function oof(animals: Animal[]): void 
        function oof(animals: Cat[]): void {
        }
        // TODO: make it so this isn't an error
        oof(cats); // okay, because there's a safe overload
            ~~~~
!!! error TS2756: Argument of type 'Cat[]' is not assignable to parameter of type 'Animal[]'. Covariant assignment of aliases to non-readonly targets are unsafe.
!!! related TS2728 tests/cases/compiler/strictAssignment4.ts:3:17: 'purr' is declared here.
        oof([new Cat]); // okay, because there's a safe overload
    
        function bar(animals: Dog[]): void
        function bar(animals: Animal[]): void {
        }
        bar(cats); // error, there's no safe overload
            ~~~~
!!! error TS2756: Argument of type 'Cat[]' is not assignable to parameter of type 'Dog[]'. Covariant assignment of aliases to non-readonly targets are unsafe.
!!! related TS2728 tests/cases/compiler/strictAssignment4.ts:4:17: 'bark' is declared here.
        bar([new Cat]); // error, there's no safe overload
             ~~~~~~~
!!! error TS2322: Type 'Cat' is not assignable to type 'Dog'.
    }
    